Fix typos, new terminology : Input/Output. Use record instead of Lombok. Use text instead of string concatenation.